# Minions

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: turn_detection_research.md
src/voice_agent/: __init__.py  config.py  event_bus.py  logger.py  main.py
src/voice_agent/asr/: base.py  mock_asr.py  sherpa_onnx_asr.py  sherpa_onnx_streaming_asr.py
src/voice_agent/audio/: microphone.py  segmenter.py  vad.py
src/voice_agent/cli/: __init__.py  command_completer.py  dynamic_shell.py  formatters.py  render.py  shell.py  tui_renderer.py  ui_state.py
src/voice_agent/core/: agent_core.py  conversation_state.py  health_check.py  intervention_gate.py  llm_client.py  local_judge_client.py  persona_test_cases.py  runtime_controller.py  utterance_buffer.py  wake_name.py
src/voice_agent/output/: console_output.py  websocket_server.py
src/voice_agent/utils/: text_normalizer.py  time_utils.py
tests/: test_agent_core.py  test_audio_mic.py  test_cli_formatters.py  test_cli_render.py  test_cli_shell_publish.py  test_cli_ui_state.py  test_command_completer.py  test_config_save.py  test_conversation_state.py  test_health_check.py  test_intervention_gate.py  test_intervention_gate_wake.py  test_llm_prompt.py  test_local_judge_config.py  test_main_defaults.py  test_persona_test_cases.py  test_runtime_controller.py  test_runtime_overrides.py  test_segmenter.py  test_sherpa_onnx_config.py  test_text_normalizer.py  test_tui_completion_stability.py  test_tui_renderer.py  test_wake_name.py
voice tool/: CLAUDE.md
(+4 files in other folders)
