[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent"
version = "0.1.0"
description = "常驻语音 Agent MVP"
dependencies = [
    "sounddevice",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "httpx",
    "websockets",
    "rich",
    "prompt_toolkit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asr = [
    "sherpa-onnx",
]
